2004-03-28  Philip Blundell  <philb@gnu.org>

	* autogen.sh: New.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile.am, configure.ac: Autoconfiscate.
	* NEWS, README, AUTHORS: New files.
	* Makefile: Deleted.

2003-12-10  Carl Worth  <cworth@east.isi.edu>

	* fdclock.c: Remove reference to deprecated cairo-xlib.h.

2003-12-02  Keith Packard  <keithp@keithp.com>

	* fdclock.c: (make_background), (main_x), (main):
	Add '-o' flag to make an ARGB32 clock that is opaque in the middle.

2003-12-02  Keith Packard  <keithp@keithp.com>

	* fdclock.c: (main_x), (main):
	Add '-a' ratio to preserve 1-1 aspect ratio.
	
	* fdhand.c: (draw_hour), (draw_minute), (draw_second), (draw_hand),
	(draw_time):
	Make hands look more like physical clock.

2003-12-01  Keith Packard  <keithp@keithp.com>

	* fdclock.c: (main_x):
	Keep cairo_t around (creating them turns out to be expensive)
	Use XEventsQueued instead of XFlush to avoid lost queued events

	* fdhand.c: (draw_hand_helper), (draw_hand), (draw_time):
	Eliminate discs from minute/second hand as wasted computation.

2003-12-01  Keith Packard  <keithp@keithp.com>

	* Makefile:
	* fdclock.c: (clear), (make_background), (main_x), (main):
	* fdface.c: (draw_fancy_tick), (draw_plain_tick), (fdface_draw):
	* fdface.h:
	* fdfacepng.c: (dump_png), (main):
	* fdhand.c: (draw_hand_helper), (draw_hand), (draw_time),
	(fdhand_draw_now):
	* fdhand.h:
	* fdlogo.c: (draw_boundary), (draw_outline), (draw_background),
	(draw_window), (draw_window_at), (draw_windows), (fdlogo_draw):
	* fdlogo.h:
	* findargb.c: (find_argb_visual):
	* findargb.h:
	Add fdfacepng program, split clock into many files.
	make background generation a bit more efficient for
	opaque case.  Add translucent disc for translucent case.
	Add options to fdclock program

2003-12-01  Keith Packard  <keithp@keithp.com>

	* fdclock.c: (draw_time), (main_x):
	Shrink default size to 150x150.
	Fix hour adjustment for minute angle.
	Add WMProperties.