@@ -1,3 +1,10 @@
+2004-06-18  Keith Packard  <keithp@keithp.com>
+
+	* fdclock.c:
+	* fdface.c: (draw_plain_tick):
+	* fdhand.c: (draw_hand), (draw_time):
+	Draw the shadows all together to make them look better
+
 2004-03-28  Philip Blundell  <philb@gnu.org>
 
 	* autogen.sh: New.
